{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 19,
  "lineage": "82ed3859-2b55-ca7c-59e8-eeab695906fa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "forNat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0af6a8f8207a99afc",
            "domain": "vpc",
            "id": "eipalloc-0a16d32b1de1dcc35",
            "network_interface": "eni-0f217c64a485dd02a",
            "private_dns": "ip-173-28-2-23.ec2.internal",
            "private_ip": "173.28.2.23",
            "public_dns": "ec2-54-236-83-240.compute-1.amazonaws.com",
            "public_ip": "54.236.83.240",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Web_Server1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-b73b63a0",
            "arn": "arn:aws:ec2:us-east-1:155614228264:instance/i-031f2d90e87e57eb6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031f2d90e87e57eb6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a56bd46263d57887",
            "private_dns": "ip-173-28-2-187.ec2.internal",
            "private_ip": "173.28.2.187",
            "public_dns": "ec2-34-201-31-187.compute-1.amazonaws.com",
            "public_ip": "34.201.31.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a1d8b111621d7be3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d0d0ea7cb56012a",
            "tags": {
              "Name": "webserver1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f867c89b15719d23"
            ]
          },
          "dependencies": [
            "aws_security_group.FrontEnd",
            "aws_subnet.Public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Web_Server2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-b73b63a0",
            "arn": "arn:aws:ec2:us-east-1:155614228264:instance/i-03243a93b225459a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03243a93b225459a9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-003ad17bc03e925da",
            "private_dns": "ip-173-28-2-129.ec2.internal",
            "private_ip": "173.28.2.129",
            "public_dns": "ec2-3-236-89-213.compute-1.amazonaws.com",
            "public_ip": "3.236.89.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04bec303a301de04d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d0d0ea7cb56012a",
            "tags": {
              "Name": "webserver2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f867c89b15719d23"
            ]
          },
          "dependencies": [
            "aws_security_group.FrontEnd",
            "aws_subnet.Public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-b73b63a0",
            "arn": "arn:aws:ec2:us-east-1:155614228264:instance/i-0c2f41eef6a70b7b9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c2f41eef6a70b7b9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c648342c3ccf79ec",
            "private_dns": "ip-173-28-3-126.ec2.internal",
            "private_ip": "173.28.3.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d27cc273ab6017c1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2fe5c6d47c98f06",
            "tags": {
              "Name": "database"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-029044c2843aba719"
            ]
          },
          "dependencies": [
            "aws_security_group.Database",
            "aws_security_group.FrontEnd",
            "aws_subnet.Private",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155614228264:internet-gateway/igw-0d3b4f3e2b4b7ea1d",
            "id": "igw-0d3b4f3e2b4b7ea1d",
            "owner_id": "155614228264",
            "tags": {
              "Name": "internet gw terraform generated"
            },
            "vpc_id": "vpc-0447a764df51a134c"
          },
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NetGw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a16d32b1de1dcc35",
            "id": "nat-00b1c2cdb5d55c825",
            "network_interface_id": "eni-0f217c64a485dd02a",
            "private_ip": "173.28.2.23",
            "public_ip": "54.236.83.240",
            "subnet_id": "subnet-00d0d0ea7cb56012a"
          },
          "dependencies": [
            "aws_eip.forNat",
            "aws_internet_gateway.gw",
            "aws_subnet.Public",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155614228264:network-acl/acl-013bc0353e1e7b5b7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 2,
                "to_port": 0
              }
            ],
            "id": "acl-013bc0353e1e7b5b7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 1,
                "to_port": 0
              }
            ],
            "owner_id": "155614228264",
            "subnet_id": null,
            "subnet_ids": [],
            "tags": {
              "Name": "open acl"
            },
            "vpc_id": "vpc-0447a764df51a134c"
          },
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT_Private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-001e179339dbf7e1c",
            "owner_id": "155614228264",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-00b1c2cdb5d55c825",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT"
            },
            "vpc_id": "vpc-0447a764df51a134c"
          },
          "dependencies": [
            "aws_eip.forNat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.NetGw",
            "aws_subnet.Public",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT_Public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c7531900fb8eb36b",
            "owner_id": "155614228264",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d3b4f3e2b4b7ea1d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT_Public"
            },
            "vpc_id": "vpc-0447a764df51a134c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f74ca7a2c25cfbf0",
            "route_table_id": "rtb-0c7531900fb8eb36b",
            "subnet_id": "subnet-00d0d0ea7cb56012a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.RT_Public",
            "aws_subnet.Public",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_Private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ff9d2bf1982738c",
            "route_table_id": "rtb-001e179339dbf7e1c",
            "subnet_id": "subnet-0f2fe5c6d47c98f06"
          },
          "dependencies": [
            "aws_eip.forNat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.NetGw",
            "aws_route_table.RT_Private",
            "aws_subnet.Private",
            "aws_subnet.Public",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Database",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155614228264:security-group/sg-029044c2843aba719",
            "description": "ONLY tcp CONNECTION INBOUND",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029044c2843aba719",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f867c89b15719d23"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database",
            "name_prefix": null,
            "owner_id": "155614228264",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0447a764df51a134c"
          },
          "dependencies": [
            "aws_security_group.FrontEnd",
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "FrontEnd",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155614228264:security-group/sg-0f867c89b15719d23",
            "description": "ONLY HTTP CONNECTION INBOUD",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f867c89b15719d23",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "FrontEnd",
            "name_prefix": null,
            "owner_id": "155614228264",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "FrontEnd"
            },
            "timeouts": null,
            "vpc_id": "vpc-0447a764df51a134c"
          },
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155614228264:subnet/subnet-0f2fe5c6d47c98f06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "173.28.3.0/24",
            "id": "subnet-0f2fe5c6d47c98f06",
            "map_public_ip_on_launch": false,
            "owner_id": "155614228264",
            "tags": {
              "Name": "Private"
            },
            "vpc_id": "vpc-0447a764df51a134c"
          },
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155614228264:subnet/subnet-00d0d0ea7cb56012a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "173.28.2.0/24",
            "id": "subnet-00d0d0ea7cb56012a",
            "map_public_ip_on_launch": false,
            "owner_id": "155614228264",
            "tags": {
              "Name": "Public"
            },
            "vpc_id": "vpc-0447a764df51a134c"
          },
          "dependencies": [
            "aws_vpc.MyVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyVpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155614228264:vpc/vpc-0447a764df51a134c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "173.28.0.0/16",
            "default_network_acl_id": "acl-015dd93faf2526a99",
            "default_route_table_id": "rtb-032fe602761d96210",
            "default_security_group_id": "sg-08e67843f0614fd24",
            "dhcp_options_id": "dopt-536ac729",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0447a764df51a134c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-032fe602761d96210",
            "owner_id": "155614228264",
            "tags": {
              "Name": "My terraform vpc"
            }
          }
        }
      ]
    }
  ]
}